--- a/my_portfolio/css/clean-blog.css
+++ b/my_portfolio/css/clean-blog.css
@@ -7,6 +7,7 @@ body {
   font-family: 'Lora', 'Times New Roman', serif;
   font-size: 20px;
   color: #333333;
+
 }
 p {
   line-height: 1.5;
@@ -33,7 +34,7 @@ a:focus {
 }
 a img:hover,
 a img:focus {
-  cursor: zoom-in;
+  cursor: pointer;
 }
 blockquote {
   color: #777777;
@@ -375,7 +376,7 @@ form .row:first-child .floating-label-form-group {
 .pager .disabled > span {
   color: #777777;
   background-color: #333333;
-  cursor: not-allowed;
+
 }
 ::-moz-selection {
   color: white;
